ng version - add, edit, delete urls

--- a/bookmark-manager-angular/src/app/add-bookmark/add-bookmark.component.html
+++ b/bookmark-manager-angular/src/app/add-bookmark/add-bookmark.component.html
@@ -7,4 +7,5 @@
         <i class="fa-solid fa-trash"></i>
     </button>
 </form>
-<p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+
+<p *ngIf="errorMessage" id="error-message">{{ errorMessage }}</p>
