--- a/bookmark-manager-angular/src/app/app.component.html
+++ b/bookmark-manager-angular/src/app/app.component.html
@@ -1,9 +1,15 @@
 <!-- Main layout (parent of all components) -->
 
-<div class="container">
+<!-- <div class="container">
     <h1>URL Bookmark Manager</h1>
     <app-add-bookmark (bookmarkAdded)="goToResults($event)"></app-add-bookmark>
     <app-bookmark-list></app-bookmark-list>
     <app-pagination></app-pagination>
 </div>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+
+<div class="container">
+    <h1>URL Bookmark Manager</h1>
+    <router-outlet></router-outlet>
+</div>
